# hadoop-formats

./: .travis.yml  README.md  hadoop-formats.cabal
cbits/: decode.c  decode.h
src/Data/Hadoop/: SequenceFile.hs  Unsafe.hsc  Writable.hs
src/Data/Hadoop/SequenceFile/: Parser.hs  Types.hs
src/Hadoop/: SequenceFile.hs  Unsafe.hsc  Writable.hs
src/Hadoop/SequenceFile/: Parser.hs  Types.hs
tests/: Main.hs  MakeSequenceFiles.java  long-double.seq  make-seq  text-int.seq
