name:          hadoop-formats
version:       0.1.0.0
synopsis:      Read/write file formats commonly used by Hadoop.
description:   Read/write file formats commonly used by Hadoop.
homepage:      http://github.com/jystic/hadoop-formats
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
copyright:     Jacob Stanley (c) 2014
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src

  c-sources: cbits/decode.c
  include-dirs: cbits
  extra-libraries: snappy

  -- cc-options:
  --   -Weverything
  --   -Werror
  --   -Wno-error=variadic-macros
  --   -Wno-error=unused-parameter
  --   -Wno-error=undef
  --   -Wno-error=padded
  --   -Wno-error=format-nonliteral
  --   -fcolor-diagnostics

  ghc-options: -O2 -funbox-strict-fields
  ghc-prof-options: -auto-all -caf-all

  other-modules:
    Data.Hadoop.Unsafe

  exposed-modules:
    Data.Hadoop.SequenceFile

  build-depends:
        base       >= 4.7 && < 4.8
      , attoparsec >= 0.12
      , bytestring >= 0.10
      , snappy     >= 0.2
      , text       >= 1.1
      , vector     >= 0.10
